Se agrego la columna entorno

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                   <th scope="col">Usuario</th>
                   <th scope="col">Manager</th>
                   <th scope="col">Delegado</th>
+                  <th scope="col">Entorno</th>
                   <th scope="col">LogIn</th>
                 </tr>
               </thead>
@@ -78,6 +79,7 @@
                   <th scope="col">Usuario</th>
                   <th scope="col">Manager</th>
                   <th scope="col">Delegado</th>
+                  <th scope="col">Entorno</th>
                   <th scope="col">LogIn</th>
                 </tr>
               </tfoot>
