--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
                 <tr>
                   <th scope="col">Squad</th>
                   <th scope="col">Puesto</th>
-                  <th scope="col">Usuario</th>
+                  <th scope="col">Nombre Usuario</th>
                   <th scope="col">Manager</th>
                   <th scope="col">Delegado</th>
                   <th scope="col">Entorno</th>
-                  <th scope="col">LogIn</th>
+                  <th scope="col"></th>
                 </tr>
               </thead>
               <tfoot>
                 <tr>
                   <th scope="col">Squad</th>
                   <th scope="col">Puesto</th>
-                  <th scope="col">Usuario</th>
+                  <th scope="col">Nombre Usuario</th>
                   <th scope="col">Manager</th>
                   <th scope="col">Delegado</th>
                   <th scope="col">Entorno</th>
-                  <th scope="col">LogIn</th>
+                  <th scope="col"></th>
                 </tr>
               </tfoot>
               <tbody id ="contenidoTest">
